<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@drawable/settingshdpi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--GENEL SES AYARI-->

    <!--MÜZİK SESİ AYARI-->

    <!--DİL SEÇME ALANI-->

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="240dp"
        android:layout_marginBottom="95dp"
        android:text="@string/general_volume"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/generalVol"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/animalVol"
        app:layout_constraintStart_toStartOf="@+id/animalVol"
        app:layout_constraintTop_toBottomOf="@+id/animalVol" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:text="@string/animal_volume"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <SeekBar
        android:id="@+id/animalVol"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toTopOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/change_language"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <!-- UYGULAMA VERSİYON KISMI -->

    <ImageButton
        android:id="@+id/ibTr"
        android:layout_width="32dp"
        android:layout_height="20dp"
        android:layout_marginStart="90dp"
        android:background="@drawable/turkey"
        android:contentDescription="Türkçe"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />

    <ImageButton
        android:id="@+id/ibEn"
        android:layout_width="32dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/en"
        android:contentDescription="İngilizce"
        app:layout_constraintBottom_toBottomOf="@+id/ibTr"
        app:layout_constraintStart_toEndOf="@+id/ibTr"
        app:layout_constraintTop_toTopOf="@+id/ibTr" />

    <ImageButton
        android:id="@+id/ibChi"
        android:layout_width="32dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/china"
        android:contentDescription="Çince"
        app:layout_constraintBottom_toBottomOf="@+id/ibJap"
        app:layout_constraintStart_toEndOf="@+id/ibJap"
        app:layout_constraintTop_toTopOf="@+id/ibJap" />

    <ImageButton
        android:id="@+id/ibJap"
        android:layout_width="32dp"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/japan"
        android:contentDescription="Japonca"
        app:layout_constraintBottom_toBottomOf="@+id/ibEn"
        app:layout_constraintStart_toEndOf="@+id/ibEn"
        app:layout_constraintTop_toTopOf="@+id/ibEn" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/app_version"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/txthakkinda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="110dp"
        android:text="@string/version"
        android:textColor="@color/white"
        android:textSize="14dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_developer"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/textView9"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/txtyapimci"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/developer_name"
        android:textColor="@color/white"
        android:textSize="14dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="@+id/txthakkinda"
        app:layout_constraintStart_toStartOf="@+id/txthakkinda"
        app:layout_constraintTop_toBottomOf="@+id/txthakkinda" />

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:background="@drawable/back"
        android:onClick="geriDon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>